packages/typ/tests/fixtures/diagnostics/0383_labels_wrong_x_type_08.ml.infer.expected
File "0383_labels_wrong_x_type_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0383_labels_wrong_x_type_08 is not a valid module name.

File "0383_labels_wrong_x_type_08.ml", line 2, characters 22-26:
2 | let _ = pick_theta ~x:true ~y:false
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
